# CXOS

./: .gitignore  CMakeLists.txt  Makefile  build-run.sh  build.sh  configs.shlib  generate.sh  link.ld  pack-initrd.sh  run.sh  toolchain.cfg.defaults
acpica/: utmath.c
acpica/platform/: accxos.h  acenv.h
cxkrnltest.xcodeproj/: project.pbxproj
cxkrnltest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cxkrnltest.xcodeproj/xcuserdata/osdever.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: assert.h  console.h  console.hpp  cx_throw.hpp  fixed_vector.hpp  gdt.h  global_timer.hpp  idt.h  interrupt_controller.hpp  interrupt_handlers.hpp  interrupt_table.hpp  interrupt_types.hpp  interrupts.hpp  intrinsics.h  itoa.h  keyboard.h  kprint.h  memory.h  memory.hpp  multiboot.h  panic.h  panic.hpp  pit.h  pit_timer.hpp  ports.hpp  printf.h  ps2_keyboard.hpp  ps2_protocol.hpp  stack_trace.hpp  startup.hpp  stdint.h  timer.hpp  tlist.h  vga_console.hpp
include/fs/: directory.h  file.h  node.h  root.h
include/i386/: ioports.h
include/stl/: function.hpp  initializer_list.hpp  list.hpp  nullptr.hpp  pair.hpp  shared_ptr.hpp
initrd/home/cxos/: message.txt
initrd/usr/src/: basic-link.ld  console-test.c
src/: console.cpp  cx_throw.hpp  cxxnew.cpp  fsmain.cpp  gdt.cpp  itoa.cpp  kmain.cpp  kprint.cpp  lgdt.asm  memory.cpp  panic.cpp  pit_timer.cpp  printf.cpp  ps2_keyboard.cpp  stack_trace.cpp  startup.cpp  string.h  vga_console.cpp
src/cx/os/kernel/: cxxnew.cpp  initrd_tar.hpp  kmain.cpp  kprintf.hpp  multiboot.h  startup.cpp  startup.hpp
src/cx/os/kernel/debug/: panic.cpp  stack_trace.cpp
src/cx/os/kernel/devices/acpi/: acpi_dsdt.hpp  acpi_facs.hpp  acpi_fadt.hpp  acpi_pointers.hpp  acpi_power_profile.hpp  acpi_root_sdt_base.hpp  acpi_rsdp_v1.hpp  acpi_rsdp_v2.hpp  acpi_rsdt.hpp  acpi_sdt_base.hpp  acpi_validatable.hpp  acpi_xsdt.hpp  acpica_os_layer.cpp_
src/cx/os/kernel/fs/: fs.cpp  fs.hpp  fs_basic_stream.hpp  fs_block_stream.hpp  fs_character_device.hpp  fs_character_stream.hpp  fs_directory.hpp  fs_file.hpp  fs_file_stream.hpp  fs_node.hpp  fs_node_impl.hpp  fs_node_type.hpp
src/cx/os/kernel/i386/: mbootmain.asm  u64helpers.cpp
src/cx/os/kernel/interrupts/: interrupt_controller.hpp  interrupt_handlers.hpp  interrupt_regs.hpp  interrupt_types.hpp  interrupts.cpp  interrupts.hpp
src/cx/os/kernel/memory/: memory.cpp  memory.hpp
src/cx/os/kernel/paging/: mmu_page.hpp  page_entry.hpp  paging.cpp  paging.hpp
src/cx/stl/: enable_if.hpp  function.hpp  list.hpp  optional.hpp  shared_ptr.hpp
src/cx/util/: fixed_vector.hpp  min_list.hpp  round_queue.hpp
src/cxx/: crti.asm  crtn.asm
src/i386/: console.cpp  gdt.cpp  idt.asm  idt.cpp  interrupts.cpp  interrupts_impl.asm  keyboard.cpp  memory.cpp  panic.cpp
src/mbootmain/: mbootmain.asm
(+32 files in other folders)
